# context-wrapper

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: LLM_CONTEXT.md
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: error-boundary.tsx  layout.tsx  search-command.tsx
frontend/src/lib/: api.ts  format.ts  types.ts  utils.ts
frontend/src/pages/: JobPage.tsx  MeetingDetailPage.tsx  MeetingsPage.tsx  NewMeetingPage.tsx  NotFoundPage.tsx  PageStub.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  SpeakersPage.tsx  TasksPage.tsx
src/meet/: __init__.py  anthropic_oauth.py  audio.py  auth_store.py  cli.py  config.py  context_export.py  diarize.py  extract.py  llm_providers.py  media.py  merge.py  model_catalog.py  models.py  openai_oauth.py  pipeline.py  progress.py  render.py  store.py  traceability.py  transcribe.py  visual.py  voicebank.py
src/meet/web/: __init__.py  app.py  jobs.py
tests/: conftest.py  test_audio.py  test_audio_timeout.py  test_auth_store.py  test_cli.py  test_context_export.py  test_extract.py  test_jobs.py  test_merge.py  test_model_catalog.py  test_openai_oauth.py  test_path_security.py  test_progress.py  test_projects.py  test_render.py  test_settings_local.py  test_store.py  test_store_transcript.py  test_tier1.py  test_tier2.py  test_traceability.py  test_traceable.py  test_transcribe.py  test_transcript_normalization.py  test_visual.py  test_visual_evidence.py  test_voicebank.py
(+15 files in other folders)
