[project]
name = "context-wrapper"
version = "0.1.0"
description = "Grava reunião -> transcreve -> identifica quem falou -> extrai action items"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "faster-whisper>=1.1",
    "pyannote.audio>=3.3",
    "torch>=2.4",
    "torchaudio>=2.4",
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",
    "numpy>=1.26",
    # UI web local
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # frontend SPA (React/Vite build)
    # jinja2 e python-multipart removidos (migração para API JSON + SPA)
    # exigidas pelo ctranslate2 (faster-whisper); versões ditadas pelo torch cu128
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]

[project.scripts]
meet = "meet.cli:app"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meet"]

# build do frontend React/Vite
[tool.hatch.build.targets.wheel.force-include]
"src/meet/web/dist" = "meet/web/dist"

# torch alinhado com CUDA 12 (mesmo major que o ctranslate2/faster-whisper usa),
# evitando dois runtimes CUDA no mesmo processo.
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
